@@ -1,0 +1,34 @@
+<animated-vector
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:aapt="http://schemas.android.com/aapt">
+  <aapt:attr name="android:drawable">
+    <vector
+      android:name="vector"
+      android:width="24dp"
+      android:height="24dp"
+      android:viewportWidth="24"
+      android:viewportHeight="24">
+      <group
+        android:name="group"
+        android:pivotX="12"
+        android:pivotY="12.5">
+        <path
+          android:name="path"
+          android:pathData="M 12 17.27 L 16.15 19.78 C 16.91 20.24 17.84 19.56 17.64 18.7 L 16.54 13.98 L 20.21 10.8 C 20.88 10.22 20.52 9.12 19.64 9.05 L 14.81 8.64 L 12.92 4.18 C 12.58 3.37 11.42 3.37 11.08 4.18 L 9.19 8.63 L 4.36 9.04 C 3.48 9.11 3.12 10.21 3.79 10.79 L 7.46 13.97 L 6.36 18.69 C 6.16 19.55 7.09 20.23 7.85 19.77 Z"
+          android:fillColor="@color/retro_yellow"
+          android:strokeWidth="1" />
+      </group>
+    </vector>
+  </aapt:attr>
+  <target android:name="group">
+    <aapt:attr name="android:animation">
+      <objectAnimator
+        android:propertyName="rotation"
+        android:duration="400"
+        android:valueFrom="0"
+        android:valueTo="215"
+        android:valueType="floatType"
+        android:interpolator="@android:interpolator/fast_out_slow_in" />
+    </aapt:attr>
+  </target>
+</animated-vector>
