@@ -1,0 +1,20 @@
+<?xml version="1.0" encoding="utf-8"?>
+<layer-list
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  android:autoMirrored="true">
+  <item>
+    <ripple android:color="@color/highlight">
+      <item
+        android:left="8dp"
+        android:top="2dp"
+        android:bottom="2dp">
+        <shape android:shape="rectangle">
+          <corners
+            android:topLeftRadius="16dp"
+            android:bottomLeftRadius="16dp" />
+          <solid android:color="@color/surface" />
+        </shape>
+      </item>
+    </ripple>
+  </item>
+</layer-list>
