@@ -510,6 +510,30 @@
       </LinearLayout>
 
       <LinearLayout
+        android:id="@+id/linear_feedback"
+        style="@style/Widget.Doodle.LinearLayout.ListItem.TwoLine.Clickable">
+
+        <ImageView
+          android:id="@+id/image_feedback"
+          style="@style/Widget.Doodle.ImageView.ListItem.Icon"
+          android:src="@drawable/ic_round_feedback_anim"
+          tools:ignore="ContentDescription" />
+
+        <LinearLayout style="@style/Widget.Doodle.LinearLayout.ListItem.TextBox">
+
+          <TextView
+            style="@style/Widget.Doodle.TextView.ListItem.Title"
+            android:text="@string/action_send_feedback" />
+
+          <TextView
+            style="@style/Widget.Doodle.TextView.ListItem.Description"
+            android:text="@string/action_rate_description" />
+
+        </LinearLayout>
+
+      </LinearLayout>
+
+      <LinearLayout
         android:id="@+id/linear_developer"
         style="@style/Widget.Doodle.LinearLayout.ListItem.TwoLine.Clickable">
 
