@@ -23,9 +23,17 @@
 
   <string name="app_name">Doodle</string>
   <string name="app_developer" translatable="false">Patrick Zedler</string>
+  <string name="app_mail" translatable="false">patrick@zedler.xyz</string>
 
   <string name="action_close">Close</string>
   <string name="action_set">Set</string>
+  <string name="action_send_feedback">Send feedback</string>
+  <string name="action_share">Share</string>
+  <string name="action_share_description">Tell your friends about Doodle</string>
+  <string name="action_email">Send email</string>
+  <string name="action_email_description">Contact the developer</string>
+  <string name="action_rate">Rate on Google Play</string>
+  <string name="action_rate_description">Support the development</string>
 
   <string name="setting_night_mode">Night mode</string>
   <string name="setting_night_mode_description">Completely dark shapes</string>
@@ -64,6 +72,9 @@
   <string name="category_about">About</string>
   <string name="category_licenses">Open source licenses</string>
 
+  <string name="msg_feedback">A great app requires a lot of time and lives from the feedback of its users.\n\nDo you have any wishes, comments or questions? Contact me!\nOtherwise I would be very happy about a nice review in the Play Store.</string>
+  <string name="msg_share">Check out this cool live wallpaper app: \nhttps://play.google.com/store/apps/details?id=xyz.zedler.patrick.doodle</string>
+
   <string name="license_author_google" translatable="false">Google</string>
   <string name="license_material_icons" translatable="false">Material Design Icons</string>
   <string name="license_material_icons_link" translatable="false">https://github.com/google/material-design-icons</string>
@@ -72,5 +83,7 @@
   <string name="license_jost" translatable="false">Jost* Typeface</string>
   <string name="license_jost_author" translatable="false">Owen Earl</string>
   <string name="license_jost_link" translatable="false">https://github.com/indestructible-type/Jost</string>
+
+  <string name="title_feedback">Feedback</string>
 
 </resources>
